Bug 1454152 - Allow bitmaps from emoji fonts that have no outlines with Fontconfig. r=jfkthame

The default Cairo-compatible behavior of ignoring all embedded bitmaps in a font
if hinting is disabled and antialiasing is enabled seems to not work with emoji
fonts like Noto Color Emoji which do not have any outlines at all, but do have
color bitmaps that present as scalable. Detect this corner case and allow bitmaps.

Differential Revision: https://phabricator.services.mozilla.com/D133328