gfx/thebes/gfxFcPlatformFontList.cpp
@@ -676,12 +676,8 @@ static void PrepareFontOptions(FcPattern* aPattern, int* aOutLoadFlags,
     }
   }
 
-  FcBool bitmap;
-  if (FcPatternGetBool(aPattern, FC_EMBEDDED_BITMAP, 0, &bitmap) !=
-      FcResultMatch) {
-    bitmap = FcFalse;
-  }
-  if (fc_antialias && (fc_hintstyle == FC_HINT_NONE || !bitmap)) {
+  if (!FcPatternAllowsBitmaps(aPattern, fc_antialias != FcFalse,
+                              fc_hintstyle != FC_HINT_NONE)) {
     loadFlags |= FT_LOAD_NO_BITMAP;
   }
 
